# Melon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  unix.yml  windows.yml
CMakeModules/: MelonUtils.cmake
examples/: CMakeLists.txt
examples/ChunkTask/: CMakeLists.txt  main.cpp
examples/EntityCommandBuffer/: CMakeLists.txt  main.cpp
examples/Event/: CMakeLists.txt  main.cpp
examples/HelloWorld/: CMakeLists.txt  main.cpp
examples/Input/: CMakeLists.txt  main.cpp
examples/ManualComponent/: CMakeLists.txt  main.cpp
examples/ManualDataComponent/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/MelonTask/: CMakeLists.txt
libs/MelonTask/MelonTask/: TaskHandle.cpp  TaskHandle.h  TaskManager.cpp  TaskManager.h  TaskWorker.cpp  TaskWorker.h
libs/MelonTask/include/MelonTask/: TaskHandle.h  TaskManager.h  TaskWorker.h
libs/MelonTask/src/: TaskHandle.cpp  TaskManager.cpp  TaskWorker.cpp
libs/libMelonFrontend/: CMakeLists.txt
libs/libMelonFrontend/libMelonFrontend/: Buffer.h  Camera.h  Engine.cpp  Engine.h  FragmentShader.h  MeshBuffer.h  RenderBatch.h  RenderMesh.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  SpirvUtil.cpp  SpirvUtil.h  SpirvUtils.cpp  SpirvUtils.h  StagingMeshBufferPool.cpp  StagingMeshBufferPool.h  Subrenderer.cpp  Subrenderer.h  SwapChain.cpp  SwapChain.h  UniformBuffer.h  UniformBufferPool.cpp  UniformBufferPool.h  VertexShader.h  VulkanPlatform.cpp  VulkanPlatform.h  VulkanUtil.h  VulkanUtils.h  Window.cpp  Window.h
src/: CMakeLists.txt
(+209 files in other folders)
